[package]
name = "cod_parser"
authors = ["Floris - @floris_xlx"]
version = "0.1.0"
edition = "2021"
description = "A parser for the COD file format (used for bank payment batches)"
license = "MIT"
repository = "https://github.com/floris-xlx/cod-parser"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
